# whisper-text

./: .gitignore  Cargo.toml  LICENSE  README.md  doc-header.html
.github/workflows/: docs.yml
examples/: basic.rs  file_test.rs
src/: codec.rs  error.rs  lib.rs  utils.rs
