[package]
name = "whisper-text"
version = "0.1.0"
edition = "2021"
authors = ["whisper-text contributors"]
license = "MIT"
description = "Text steganography library using zero-width Unicode characters"
repository = "https://github.com/kascit/whisper-text"
keywords = ["steganography", "unicode", "encoding", "security"]
categories = ["encoding", "text-processing"]

[dependencies]
